--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,361 @@
 */
 
 .page {
+  font-family: var(--main-font), sans-serif;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  background-image: var(--page-bg-image);
+  background-attachment: fixed;
+  margin: auto;
+  font-variation-settings: "wght" var(--main-font-weight);
+}
+
+.page__container-inline-size {
+  inline-size: var(--page-width);
+  min-inline-size: 320px;
+  margin-inline: auto;
+}
+
+.header {
+  padding: var(--header-padding);
+  margin-block: var(--header-margin-block);
+  background-color: var(--main-bg-color);
+  font-family: var(--accent-font), sans-serif;
+  border: 2px #000 solid;
+  text-align: center;
+}
+
+.header__title {
+  text-transform: uppercase;
+  font-size: var(--header-title-font-size);
+  margin-block-end: var(--header-title-margin-block-end);
+}
+
+.header__descr {
+  font-size: var(--header-descr-font-size);
+  text-transform: uppercase;
+}
+
+.card {
+  background-color: var(--main-bg-color);
+  border: 2px #000 solid;
+  min-inline-size: min-content;
+}
+
+.content__cards-list-item:not(:last-of-type) {
+  margin-block-end: var(--card-margin-block-end);
+}
+
+.card__title {
+  font-size: var(--card-font-size);
+  font-variation-settings: "wght" var(--card-title-font-weight);
+  padding: 3.5px 10px 5.5px;
+  line-height: 1.21;
+}
+
+.card__content {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  padding: var(--card-content-padding);
+}
+
+.card__content-buttons {
+  align-self: end;
+  display: flex;
+  align-items: end;
+  gap: 4px;
+}
+.card__paragraph {
+  line-height: 21px;
+  font-size: var(--card-font-size);
+}
+
+.card__paragraph:not(:last-of-type) {
+  margin-block-end: var(--card-paragraph-margin-block-end);
+}
+
+.card__image-wrapper {
+  position: relative;
+  border-block: 2px #000 solid;
+  inline-size: 100%;
+  block-size: var(--page-width);
+}
+
+.card__image {
+  block-size: 100%;
+  inline-size: 100%;
+  object-fit: cover;
+  object-position: right;
+}
+
+.filter-iam-here {
+  filter: blur(2px) hue-rotate(90deg) grayscale(50%);
+}
+
+.filter-i-clear {
+  filter: sepia(60%) grayscale(30%);
+}
+
+.filter-hands-down {
+  filter: blur(10px);
+}
+
+.filter-if-wont-work {
+  filter: saturate(400%);
+}
+
+.filter-invert-and-saturate {
+  filter: invert(80%);
+}
+
+.filter-bypass {
+  filter: sepia(100%);
+}
+
+.filter-hue-rotate-and-invert {
+  filter: hue-rotate(50deg);
+}
+
+.card__label {
+  position: absolute;
+  top: 23px;
+  right: 11px;
+  mix-blend-mode: hard-light;
+  font-family: var(--accent-font), sans-serif;
+  font-size: 14px;
+  line-height: 14px;
+  opacity: 0.5;
+  text-shadow: -1px 0 var(--text-stroke-color), 0 1px var(--text-stroke-color),
+    1px 0 var(--text-stroke-color), 0 -1px var(--text-stroke-color);
+}
+
+@supports (-webkit-text-stroke: 1px var(--text-stroke-color)) {
+  .card__label {
+    text-shadow: none;
+    -webkit-text-stroke: 1px var(--text-stroke-color);
+  }
+}
+
+.button {
+  border: 2px #000 solid;
+  font-family: var(--accent-font), sans-serif;
+  background-color: var(--main-bg-color);
+  font-size: 14px;
+  transition: box-shadow 0.3s ease;
+  position: relative;
+  cursor: pointer;
+}
+
+.button__text {
+  position: relative;
+  z-index: 1;
+  mix-blend-mode: difference;
+  color: #fff;
+}
+
+.button::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  scale: 0 1;
+  background-color: #000;
+  transition: scale 0.5s ease-in-out;
+  transform-origin: left;
+  z-index: 0;
+}
+
+.card__like-button {
+  min-block-size: 38px;
+  min-inline-size: 130px;
+  text-transform: capitalize;
+}
+
+.card__icon-button {
+  justify-self: end;
+  background-color: transparent;
+  cursor: pointer;
+  border: 2px transparent solid;
+  block-size: 38px;
+  padding: 0;
+  transition: border-color 0.3s ease;
+}
+
+.button-save {
+  display: block;
+  inline-size: var(--save-button-inline-size);
+  padding: 15px 17px;
+  margin-block: 50px 100px;
+  margin-inline: auto;
+}
+
+.button-save__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
+
+.button-save__content svg {
+  inline-size: 28px;
+  block-size: 28px;
+  fill: #fff;
+}
+
+.dialog__content-svg-wrapper {
+  inline-size: 39px;
+}
+
+.dialog__content-svg {
+  inline-size: 39px;
+  align-self: center;
+  fill: #000;
+}
+
+.dialog__save {
+  inline-size: clamp(21.3125rem, 21.0484rem + 1.1268vw, 22.0625rem);
+  flex-direction: column;
+  gap: 30px;
+  padding: 30px;
+  border: 2px #000 solid;
+}
+
+.dialog__save[open] {
+  display: flex;
+}
+
+.dialog__save::backdrop {
+  background-color: #000;
+  opacity: 0.75;
+}
+
+.dialog__content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+}
+
+.dialog__content-text {
+  font-family: var(--accent-font), sans-serif;
+  font-size: 14px;
+  line-height: 150%;
+  text-transform: uppercase;
+  display: block;
+}
+
+.dialog__button {
+  inline-size: 100%;
+  padding: 12.5px;
+  text-transform: uppercase;
+}
+
+@media (min-width: 1440px) {
+  .card__title {
+    padding: 5px 10px 4px;
+  }
+
+  .card__label {
+    top: 25px;
+    right: 25px;
+  }
+  .button-save__content {
+    flex-direction: row;
+  }
+
+  .button-save__content svg {
+    inline-size: 21px;
+    block-size: 21px;
+  }
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border-color: #000;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  box-shadow: 2px 2px #000;
+}
+
+.button:hover::after {
+  scale: 1 1;
+}
+
+.core {
+  fill: transparent;
+  transition: fill 0.3s linear 0.03s;
+}
+
+.main-body {
+  fill: transparent;
+  transition: fill 0.3s linear 0s;
+}
+
+.like-icon:hover .core {
+  fill: var(--heart-contour-color);
+  transition: fill 0.3s linear 0s;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--heart-contour-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon:active .core {
+  fill: var(--heart-main-color);
+  transition: fill 0.3s linear 0s;
+}
+
+.like-icon:active .main-body {
+  fill: var(--heart-main-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon.is-liked .core {
+  transition: fill 0.3s linear 0s;
+  fill: var(--heart-main-color);
+}
+
+.like-icon.is-liked .main-body {
+  transition: fill 0.3s linear 0.05s;
+  fill: var(--heart-main-color);
+}
+
+.like-icon.is-liked .heart {
+  transform-origin: center;
+  animation: like-scale-up 0.3s ease-in 0.1s 1;
+}
+
+.contour {
+  fill: var(--heart-contour-color);
+  transition: fill 0.1s linear;
+}
+
+.like-icon.is-liked .contour {
+  transition: fill 0.3s linear 0.06s;
+  fill: var(--heart-main-color);
+  transform-origin: center;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks-fade-in 0.3s ease-in 0.3s 1;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .like-icon.is-liked .sparks,
+  .like-icon.is-liked .heart {
+    animation: none;
+  }
 }
